force-app/main/default/objects/GTM_Page_Section__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Unchecked removes the section from the rendered page without deleting it or its content rows.</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>