force-app/main/default/objects/GTM_Page_Section__c/fields/Archived__c.field-meta.xml
<CustomField>
    <fullName>Archived__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Soft-archives this OFFERING as a whole, hiding it from the GTM Offerings Dashboard listing. Only meaningful on the offering&apos;s own tile section (Section_Key__c=&apos;tile&apos;, Template_Type__c=&apos;offerings-listing&apos;) -- it is not a per-section field, and it never deletes the record or its content. Independent of Offering_Status__c: either one hides the offering. This is NOT the same as Status__c (that section&apos;s own edit is unpublished) or Active__c (hides one section only).</inlineHelpText>
    <label>Archived</label>
    <type>Checkbox</type>
</CustomField>