force-app/main/default/objects/GTM_Page_Section__c/fields/Base_Section_Key__c.field-meta.xml
<CustomField>
    <fullName>Base_Section_Key__c</fullName>
    <description>Optional. Set only on a variant row: the Section_Key__c of the base section this is an industry variant of. Blank on base/generic sections.</description>
    <label>Base Section Key</label>
    <length>80</length>
    <type>Text</type>
</CustomField>