force-app/main/default/objects/GTM_Page_Section__c/fields/Draft_State__c.field-meta.xml
<CustomField>
    <fullName>Draft_State__c</fullName>
    <inlineHelpText>JSON holding this section&apos;s unpublished structural changes: pending sort order, pending visibility, and whether it is marked for deletion. Empty when the section has no pending changes. Mirrors Draft_Value__c on GTM Page Content.</inlineHelpText>
    <label>Draft State</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>