force-app/main/default/objects/GTM_Page_Section__c/fields/Hidden_For_Industry__c.field-meta.xml
<CustomField>
    <fullName>Hidden_For_Industry__c</fullName>
    <inlineHelpText>Optional. Comma-separated list of industry slugs this BASE section is excluded for entirely -- not a variant substitution, the section does not render at all for that industry. Blank on variant rows themselves (Base_Section_Key__c set); only meaningful on a base section.</inlineHelpText>
    <label>Hidden For Industry</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>