force-app/main/default/objects/GTM_Page_Section__c/fields/Industry_Key__c.field-meta.xml
<CustomField>
    <fullName>Industry_Key__c</fullName>
    <description>Optional. Set only on a variant row: the industry slug this whole-section variant applies to. Blank on base/generic sections.</description>
    <label>Industry Key</label>
    <length>80</length>
    <type>Text</type>
</CustomField>