force-app/main/default/objects/GTM_Page_Section__c/fields/Industry_Sort_Overrides__c.field-meta.xml
<CustomField>
    <fullName>Industry_Sort_Overrides__c</fullName>
    <inlineHelpText>Optional. JSON map of industry slug to a sort-order number that applies only when rendering that one industry, e.g. {&quot;healthcare&quot;: 25}. Does not touch Sort_Order__c (the generic/default order); only meaningful on a base section.</inlineHelpText>
    <label>Industry Sort Overrides</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>