force-app/main/default/objects/GTM_Page_Section__c/fields/Layout_Type__c.field-meta.xml
<CustomField>
    <fullName>Layout_Type__c</fullName>
    <description>Which renderer draws this section. Content and order are data; the set of layout types is the design system and does require code to extend.</description>
    <label>Layout Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>page-header</fullName>
            </value>
            <value>
                <fullName>page-footer</fullName>
            </value>
            <value>
                <fullName>hero</fullName>
            </value>
            <value>
                <fullName>lede-chips</fullName>
            </value>
            <value>
                <fullName>route-proof</fullName>
            </value>
            <value>
                <fullName>card-grid</fullName>
            </value>
            <value>
                <fullName>stat</fullName>
            </value>
            <value>
                <fullName>use-pitch</fullName>
            </value>
            <value>
                <fullName>faq</fullName>
            </value>
            <value>
                <fullName>closing</fullName>
            </value>
            <value>
                <fullName>statement</fullName>
            </value>
            <value>
                <fullName>offering-tile</fullName>
            </value>
            <value>
                <fullName>industry-profile</fullName>
            </value>
            <value>
                <fullName>offering-defaults</fullName>
            </value>
            <value>
                <fullName>industry-tile</fullName>
                <label>Industry</label>
            </value>
            <value>
                <fullName>assistant</fullName>
                <label>Assistant</label>
            </value>
            <value>
                <fullName>chapter-cards</fullName>
                <label>Chapter with cards</label>
            </value>
            <value>
                <fullName>chapter-lede</fullName>
                <label>Chapter, text only</label>
            </value>
            <value>
                <fullName>chapter-proof</fullName>
                <label>Chapter with proof panel</label>
            </value>
            <value>
                <fullName>chapter-phases</fullName>
                <label>Chapter with phases</label>
            </value>
            <value>
                <fullName>chapter-close</fullName>
                <label>Chapter with the ask</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>