force-app/main/default/objects/GTM_Page_Section__c/fields/Section_Address__c.field-meta.xml
<CustomField>
    <fullName>Section_Address__c</fullName>
    <description>Stable unique key: offering::template::section. Used to upsert seed data without duplicating rows.</description>
    <externalId>true</externalId>
    <label>Section Address</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>