force-app/main/default/objects/GTM_Page_Section__c/fields/Section_Key__c.field-meta.xml
<CustomField>
    <fullName>Section_Key__c</fullName>
    <description>Joins to MA_Page_Content__c.Section_Key__c.</description>
    <label>Section Key</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>