force-app/main/default/objects/GTM_Page_Section__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <inlineHelpText>Draft until published. A section created in the editor is Draft and does not appear on the public page until Publish runs.</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Draft</fullName><default>false</default><label>Draft</label></value>
            <value><fullName>Published</fullName><default>true</default><label>Published</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>