force-app/main/default/objects/GTM_Page_Section__c/fields/Width__c.field-meta.xml
<CustomField>
    <fullName>Width__c</fullName>
    <description>Content column width. Maps to the wrap / wrap wide classes on the rendered section.</description>
    <label>Width</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>standard</fullName>
            </value>
            <value>
                <fullName>wide</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>